Update the Blazor Server sample

--- a/samples/BlazorServer/Pages/Index.razor
+++ b/samples/BlazorServer/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+    Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
 
@@ -10,68 +10,72 @@ Welcome to your new app.
                         @bind-Value="_variable1"
                         Name="myInputName"
                         Visible="true"
-                        Disabled="false"
                         PickerAlign="Align.Right"
-                        PickerOffsetTopPositionInPixels="-5"
-                        InitialValueSetOnToday="false"
+                        PickerOffsetTopPositionInPixels="0"
+                        InitialValueSetOnToday="true"
+                        ShowCalendarIcon="true"
                         CalendarType="Calendar.DualModeJalaliDefault"
                         DigitType="DigitType.BasedOnCalendar"
                         DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
                         MinDateSetOnToday="true"
                         Placeholder="Select date"
                         CssClass="form-control"
-                        Style="        border: 1px solid red;
-        margin-left:20px;
+                        Style="margin-left:20px;
         width: 20%;
-        float: right
-"
+        float: right"
                         Theme="PickerTheme.Default"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
+                        OnChange="@(() => Console.WriteLine($"OK1 - {_variable1}"))"
+                        OnClear="@(() => Console.WriteLine("Clear1"))" />
 
 <InputPersianDatePicker Id="myInputDatePicker2"
                         @bind-Value="_variable2"
                         Name="myInputName"
                         Visible="true"
-                        Disabled="false"
+                        Disabled="true"
                         PickerAlign="Align.Left"
+                        ShowCalendarIcon="false"
                         PickerOffsetTopPositionInPixels="25"
                         InitialValueSetOnToday="false"
                         CalendarType="Calendar.DualModeMiladiDefault"
                         DigitType="DigitType.BasedOnCalendar"
                         DateFormat="DateFormat.yyyy_dash_MM_dash_dd"
                         MinDateSetOnToday="true"
-                        Placeholder="Select date"
+                        Placeholder="Disabled input"
                         CssClass="form-control"
-                        Style="        border: 1px solid purple;
-
-                                         margin-left:20px;
-
-        width: 20%;
-        float: right
-"
-                        Theme="PickerTheme.Blue"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
-
-<InputPersianDatePicker Id="myInputDatePicker3"
-                        @bind-Value="_variable3"
-                        Name="myInputName"
-                        Visible="true"
-                        Disabled="false"
-                        PickerAlign="Align.Left"
-                        PickerOffsetTopPositionInPixels="0"
-                        InitialValueSetOnToday="false"
-                        CalendarType="Calendar.SingleModeJalali"
-                        DigitType="DigitType.BasedOnCalendar"
-                        DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
-                        MinDateSetOnToday="true"
-                        Placeholder="انتخاب تاریخ"
-                        CssClass="form-control"
-                        Style="  text-align: right;      border: 1px solid blue;
-        margin-left: 20px;
+                        Style="border: 1px solid purple;
+        margin-left:20px;
         width: 20%;
         float: right"
-                        Theme="PickerTheme.Cheerup"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
+                        Theme="PickerTheme.Blue"
+                        OnChange="@(() => Console.WriteLine($"OK2 - {_variable2}"))" />
+
+
+<EditForm Model="Book">
+
+    <InputPersianDatePicker Id="myInputDatePicker3"
+                            @bind-Value="_variable3"
+                            Name="myInputName"
+                            Visible="true"
+                            ShowCalendarIcon="false"
+                            PickerAlign="Align.Right"
+                            PickerOffsetTopPositionInPixels="0"
+                            InitialValueSetOnToday="false"
+                            CalendarType="Calendar.SingleModeJalali"
+                            DigitType="DigitType.BasedOnCalendar"
+                            DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
+                            MinDateSetOnToday="true"
+                            Placeholder="انتخاب تاریخ"
+                            CssClass="form-control"
+                            Style="text-align: right;
+                                   border: 1px solid blue;
+                                   margin-left: 20px;
+                                   width: 20%;
+                                   float: right"
+                            Theme="PickerTheme.Cheerup"
+                            OnChange="@(() => Console.WriteLine($"OK3 - {_variable3}"))" />
+
+</EditForm>
+
 
 <InputPersianDatePicker Id="myInputDatePicker4"
                         @bind-Value="_variable4"
@@ -89,8 +93,18 @@ Welcome to your new app.
                         CssClass="form-control"
                         Style="border:1px solid green; width:20%; float:right"
                         Theme="PickerTheme.RedBlack"
-                        OnChange="@(() => Console.WriteLine("OK"))" />
+                        OnChange="@(() => Console.WriteLine($"OK4 - {_variable4}"))" />
 
+<br />
+<br />
+<br />
+
+<div style="display: flex; flex-direction: row-reverse; border: 1px solid green;justify-content: space-around; padding: 50px">
+    <b> Val1= @_variable1 </b>
+    <b> Val2= @_variable2 </b>
+    <b> Val3= @_variable3 </b>
+    <b> Val4= @_variable4 </b>
+</div>
 
 @*<label style="float: right; font-size: 25px; font-weight:bold"> @_myComponentPrivateField </label>*@
 
@@ -100,4 +114,17 @@ Welcome to your new app.
     private string _variable2;
     private string _variable3;
     private string _variable4;
+    private BookModel Book { get; set; } = new();
+
+    protected override void OnInitialized()
+    {
+        _variable3 = "۱۴۰۲/۱۱/۱۱";
+
+        base.OnInitialized();
+    }
+
+    public class BookModel
+    {
+        public string Name { get; set; }
+    }
 }
