--- a/src/Blazor.PersianDatePicker/wwwroot/datepicker.scss
+++ b/src/Blazor.PersianDatePicker/wwwroot/datepicker.scss
@@ -88,7 +88,7 @@
 .datepicker-container {
     display: block;
     position: absolute;
-    z-index: 100000;
+    z-index: 9900000001;
     top: 0;
     direction: rtl;
 }
