--- a/src/Blazor.PersianDatePicker/InputPersianDatePicker.razor
+++ b/src/Blazor.PersianDatePicker/InputPersianDatePicker.razor
@@ -1,4 +1,10 @@
 ﻿@using System.ComponentModel.DataAnnotations
+
+<style>
+    @GenerateStyles()
+</style>
+
+
 @if (Visible)
 {
     <div class="datepicker_wrapp" style="@Style">
@@ -16,6 +22,7 @@
         <span class="@_clearBtnCssClass" @onclick="@Clear">×</span>
     </div>
 }
+
 
 
 @code
@@ -166,6 +173,9 @@
     
     [Parameter]
     public EventCallback OnClear { get; set; }
+
+    [Parameter] 
+    public List<string> MarkedDates { get; set; } = new();
 
     [Inject] private IJSRuntime? JsRuntime { get; set; }
 
@@ -398,5 +408,38 @@
         EditContext?.NotifyFieldChanged(FieldIdentifier);
 
         await OnClear.InvokeAsync();
+    }
+
+    private string GenerateStyles()
+    {
+        var styles = new System.Text.StringBuilder();
+
+        foreach (var markedDate in MarkedDates)
+        {
+            string dataDateAttribute = FormatDateToAttributeValue(markedDate);
+
+            styles.AppendLine($".{Id}-datepicker td[data-date=\"{dataDateAttribute}\"] > span {{ color: red !important; }}");
+        }
+
+        Console.WriteLine(styles.ToString());
+
+        return styles.ToString();
+    }
+
+    private string FormatDateToAttributeValue(string markedDate)
+    {
+        // Replace '/' and '-' with ','
+        string dateWithCommas = markedDate.Replace("/", ",").Replace("-", ",");
+
+        // Split the date into parts
+        string[] dateParts = dateWithCommas.Split(',');
+
+        // Convert parts to integers to remove leading zeros
+        int year = int.Parse(dateParts[0]);
+        int month = int.Parse(dateParts[1]);
+        int day = int.Parse(dateParts[2]);
+
+        // Return the formatted date
+        return $"{year},{month},{day}";
     }
 }
