Automate Nuget publish

--- a/samples/BlazorServer/Pages/Index.razor
+++ b/samples/BlazorServer/Pages/Index.razor
@@ -10,6 +10,7 @@
                         @bind-Value="_variable1"
                         Name="myInputName"
                         Visible="true"
+                        ReadOnly="false"
                         PickerAlign="Align.Right"
                         PickerOffsetTopPositionInPixels="0"
                         InitialValueSetOnToday="true"
