feat(picker): split input/popup digits

--- a/samples/BlazorServer/Pages/Index.razor
+++ b/samples/BlazorServer/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+@page "/"
 
 <h1>Hello, world!</h1>
 
@@ -16,7 +16,8 @@
                         InitialValueSetOnToday="true"
                         ShowCalendarIcon="true"
                         CalendarType="Calendar.DualModeJalaliDefault"
-                        DigitType="DigitType.BasedOnCalendar"
+                        InputDigitType="DigitType.English"
+                        PickerDigitType="DigitType.Persian"
                         DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
                         MinDateSetOnToday="true"
                         Placeholder="Select date"
@@ -38,7 +39,7 @@
                         PickerOffsetTopPositionInPixels="25"
                         InitialValueSetOnToday="false"
                         CalendarType="Calendar.DualModeMiladiDefault"
-                        DigitType="DigitType.BasedOnCalendar"
+                        InputDigitType="DigitType.BasedOnCalendar"
                         DateFormat="DateFormat.yyyy_dash_MM_dash_dd"
                         MinDateSetOnToday="true"
                         Placeholder="Disabled input"
@@ -62,7 +63,7 @@
                             PickerOffsetTopPositionInPixels="0"
                             InitialValueSetOnToday="false"
                             CalendarType="Calendar.SingleModeJalali"
-                            DigitType="DigitType.BasedOnCalendar"
+                            InputDigitType="DigitType.BasedOnCalendar"
                             DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
                             MinDateSetOnToday="true"
                             Placeholder="انتخاب تاریخ"
@@ -87,7 +88,7 @@
                         PickerOffsetTopPositionInPixels="1"
                         InitialValueSetOnToday="false"
                         CalendarType="Calendar.SingleModeMiladi"
-                        DigitType="DigitType.BasedOnCalendar"
+                        InputDigitType="DigitType.BasedOnCalendar"
                         DateFormat="DateFormat.yyyy_slash_MM_slash_dd"
                         MinDateSetOnToday="true"
                         Placeholder="Select date"
@@ -129,3 +130,4 @@
         public string Name { get; set; }
     }
 }
+
